# FCC-Python-challenges

./: .bandit  .bandit.yml  .gitignore  .mega-linter.yml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bandit.yml  codacy.yml  mega-linter.yml  package_build.yml  ruff.yml
challenges/id_001_vowel_balance/: README.md  solution.py
challenges/id_145_nth_fibonacci_number/: README.md  solution.py
challenges/id_146_left_handed_seat_at_the_table/: README.md  solution.py
challenges/id_147_leap_year_calculator/: README.md  solution.py
challenges/id_148_tire_pressure/: README.md  solution.py
tests/: test_001_vowel_balance.py  test_145_nth_fibonacci_number.py  test_146_left_handed_seat_at_the_table.py  test_147_leap_year_calculator.py  test_148_tire_pressure.py
